Correcting spacing

--- a/src/components/SectionCard/styles.module.scss
+++ b/src/components/SectionCard/styles.module.scss
@@ -38,7 +38,7 @@
 
 .body {
   padding: 1.2rem 1.2rem 4rem 0;
-  height: 30rem;
+  height: 32rem;
   position: relative;
   overflow: hidden;
 
@@ -213,7 +213,7 @@
 
   &__content {
     text-align: left;
-    padding: 1rem 2rem 1.5rem 2rem;
+    padding: 1rem 2rem;
   }
 
   &__close {
